--- a/index.html
+++ b/index.html
@@ -4,28 +4,204 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
   <title>هدى القرآن</title>
-
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-MHNRLGXD');</script>
-  <!-- End Google Tag Manager -->
-
+  
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
   <style>
-    /* الكود الخاص بالتنسيقات */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Arial', sans-serif;
+    }
+
+    body {
+      background: linear-gradient(135deg, #004d40 0%, #00251a 100%);
+      color: #fff;
+      min-height: 100vh;
+      position: relative;
+      padding-bottom: 80px;
+    }
+
+    .top-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 20px;
+      background: rgba(0, 69, 64, 0.9);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
+
+    .header-title {
+      text-align: center;
+      font-size: 2em;
+      padding: 20px;
+      background: rgba(0,0,0,0.2);
+      border-bottom: 2px solid #ffd700;
+      font-family: 'Amiri', serif;
+    }
+
+    .button-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 25px;
+      padding: 30px 15px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .option-button {
+      position: relative;
+      padding: 25px;
+      background: rgba(0, 77, 64, 0.8);
+      color: #ffd700;
+      font-size: 1.3em;
+      text-align: center;
+      border-radius: 12px;
+      border: 2px solid #004d40;
+      transition: all 0.3s ease;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 120px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      flex-direction: column;
+    }
+
+    .option-button:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+    }
+
+    .footer-menu {
+      display: flex;
+      justify-content: space-around;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background: rgba(0, 69, 64, 0.95);
+      padding: 15px 0;
+      border-top: 2px solid #ffd700;
+      backdrop-filter: blur(5px);
+      z-index: 1000;
+    }
+
+    .footer-menu a {
+      color: #fff;
+      text-decoration: none;
+      font-size: 1em;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      transition: 0.3s;
+      padding: 8px 20px;
+      border-radius: 8px;
+      min-width: 90px;
+    }
+
+    .footer-menu a:hover, 
+    .footer-menu a.active {
+      color: #ffd700;
+      background: rgba(255,255,255,0.1);
+    }
+
+    .footer-menu i {
+      font-size: 1.8em;
+      margin-bottom: 8px;
+    }
+
+    .search-container {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      background: rgba(0, 69, 64, 0.95);
+      padding: 15px;
+      display: none;
+      z-index: 1000;
+    }
+
+    .search-container.visible {
+      display: block;
+    }
+
+    .search-input {
+      width: 100%;
+      padding: 12px;
+      border-radius: 25px;
+      border: 2px solid #ffd700;
+      background: rgba(255,255,255,0.1);
+      color: #fff;
+      font-size: 1em;
+    }
+
+    @media (max-width: 768px) {
+      .header-title {
+        font-size: 1.5em;
+        padding: 15px;
+      }
+
+      .button-container {
+        grid-template-columns: 1fr;
+        gap: 15px;
+        padding: 20px 10px;
+      }
+
+      .option-button {
+        font-size: 1.1em;
+        padding: 20px;
+        min-height: 100px;
+      }
+
+      .footer-menu a {
+        font-size: 0.9em;
+        padding: 8px 15px;
+        min-width: 80px;
+      }
+
+      .footer-menu i {
+        font-size: 1.5em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .top-bar {
+        padding: 10px 15px;
+      }
+
+      .header-title {
+        font-size: 1.3em;
+        padding: 10px;
+      }
+
+      .option-button {
+        font-size: 1em;
+      }
+
+      .footer-menu {
+        padding: 10px 0;
+      }
+
+      .footer-menu a {
+        font-size: 0.8em;
+        padding: 8px 10px;
+        min-width: 70px;
+      }
+
+      .footer-menu i {
+        font-size: 1.3em;
+        margin-bottom: 5px;
+      }
+
+      .search-input {
+        padding: 10px;
+      }
+    }
   </style>
 </head>
 <body>
-
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MHNRLGXD"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
 
   <div class="top-bar">
     <i class="fas fa-search" onclick="toggleSearch()"></i>
@@ -96,38 +272,6 @@
     document.querySelector('.search-container').addEventListener('click', (e) => {
       e.stopPropagation();
     });
-
-    // إضافة حماية لمنع أدوات المطورين
-    (function() {
-      function redirectToTelegram() {
-        window.location.href = "https://t.me/HudaApps";
-      }
-
-      // منع أدوات المطورين باستخدام F12 و Ctrl+Shift+I
-      document.addEventListener("keydown", function(event) {
-        if (
-          event.key === "F12" || 
-          (event.ctrlKey && event.shiftKey && event.key === "I") || 
-          (event.ctrlKey && event.key === "U")
-        ) {
-          event.preventDefault();
-          redirectToTelegram();
-        }
-      });
-
-      // منع النقر بزر الفأرة الأيمن
-      document.addEventListener("contextmenu", function(event) {
-        event.preventDefault();
-        redirectToTelegram();
-      });
-
-      // الكشف عن فتح أدوات المطورين
-      setInterval(function() {
-        if (window.outerHeight - window.innerHeight > 200 || window.outerWidth - window.innerWidth > 200) {
-          redirectToTelegram();
-        }
-      }, 1000);
-    })();
   </script>
 
 </body>
