--- a/index.html
+++ b/index.html
@@ -233,6 +233,14 @@
     </a>
   </div>
 
+  <!-- إضافة إعلان المنتج هنا -->
+  <div class="product-ad">
+    <a href="https://amzn.to/43CWrHl" target="_blank">
+      <img src="https://m.media-amazon.com/images/I/51-wIYz8FtL.jpg" alt="جوردون رامزي الطبخ المنزلي" style="width: 100%; max-width: 300px; border-radius: 8px;">
+      <p style="font-size: 1.2em; color: #ffd700; text-align: center;">جوردون رامزي: الطبخ المنزلي على طريقة جوردون رامزي</p>
+    </a>
+  </div>
+
   <div class="footer-menu">
     <a href="https://www.example.com/home" class="active">
       <i class="fas fa-home"></i>
@@ -264,15 +272,4 @@
 
     document.addEventListener('click', (e) => {
       const searchBox = document.getElementById('searchBox');
-      if (!e.target.closest('.fa-search') && !e.target.closest('.search-container')) {
-        searchBox.classList.remove('visible');
-      }
-    });
-
-    document.querySelector('.search-container').addEventListener('click', (e) => {
-      e.stopPropagation();
-    });
-  </script>
-
-</body>
-</html>
+      if (!e.target.closest('.fa-search
