--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
   <!-- إضافة إعلان المنتج هنا -->
   <div class="product-ad">
     <a href="https://amzn.to/43CWrHl" target="_blank">
-      <img src="https://m.media-amazon.com/images/I/51-wIYz8FtL.jpg" alt="جوردون رامزي الطبخ المنزلي" style="width: 100%; max-width: 300px; border-radius: 8px;">
+      <img src="https://m.media-amazon.com/images/I/51n7Bnbx1DL._SX342_SY445_.jpg" alt="جوردون رامزي الطبخ المنزلي" style="width: 100%; max-width: 300px; border-radius: 8px;">
       <p style="font-size: 1.2em; color: #ffd700; text-align: center;">جوردون رامزي: الطبخ المنزلي على طريقة جوردون رامزي</p>
     </a>
   </div>
